--- a/message-bottle.html
+++ b/message-bottle.html
@@ -115,7 +115,7 @@
 
   <button class="draw-button" onclick="drawMessage()">Draw a Message</button>
   <button class="putback-button" onclick="putBackMessage()">Put Paper Back</button>
-  <button class="back-button" onclick="window.location.href='Brio.html'">Back to Garden</button>
+  <button class="back-button" onclick="window.location.href='index.html'">Back to Garden</button>
 
   <div id="messageBox"></div>
 
@@ -231,3 +231,4 @@
 
 </body>
 </html>
+
